Changed the navbar slightly, made a working search bar, changed the background of the app to white, made my cards align in a grid and removed the filter by

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,13 +1,25 @@
 .arts-cards {
-  margin: 80px;
-  height: 400px;
-  width: 300px!important;
-  background-color: transparent;
+  margin: 0 auto;
   border: transparent;
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  margin-left: center;
 }
 
 .content {
   padding: 8px;
   color: black;
+}
+
+.art-card {
+  background-color: transparent;
+  border: 1px solid black;
+  box-shadow: 3px 3px 5px px rgb(189, 189, 189);
+  width: 250px;
+}
+
+#photo {
+  display: flex;
+  width: 100%;
+  border: 2px solid rgb(44, 44, 44);
 }
