--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -9,7 +9,7 @@
 @import "carousel";
 
 body {
-  background-color: #D2D1CF;
+  background-color: white;
 }
 
 #filter-search-bar {
@@ -19,10 +19,13 @@ body {
 
 #page-info {
   margin: 32px;
+  margin-top: 32px;
+  color: grey;
 }
 
-#line {
-  border: solid 2px black;
-  width: 900px;
-  margin: 24px;
+.line {
+  border: solid 2px rgb(61, 61, 61);
+  width: 100px;
+  margin: 0;
+  padding: 0;
 }
