--- a/app/views/arts/index.html.erb
+++ b/app/views/arts/index.html.erb
@@ -1,10 +1,10 @@
 <div>
   <body>
     <div id="index-content" style="display:flex;">
-      <div id="filter-search-bar">
+      <%# <div id="filter-search-bar">
         <form class="filter-box">
           <h5>Style</h3>
-          <div class="form-check">
+          <div class="form-check" value="filter">
             <input type="checkbox" class="form-check-input" id="exampleCheck1">
             <p><label class="form-check-label" for="exampleCheck1">Fine Art</label></p>
             <input type="checkbox" class="form-check-input" id="exampleCheck1">
@@ -31,86 +31,13 @@
             <p><label class="form-check-label" for="exampleCheck1">Portraiture</label></p>
             <input type="checkbox" class="form-check-input" id="exampleCheck1">
             <p><label class="form-check-label" for="exampleCheck1">Impressionism</label></p>
-          </div>
-        </form>
-
-        <form class="filter-box">
-          <h5>Subject</h3>
-          <div class="form-check">
-            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-            <p><label class="form-check-label" for="exampleCheck1">Abstract</label></p>
-            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-            <p><label class="form-check-label" for="exampleCheck1">Landscape</label></p>
-            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-            <p><label class="form-check-label" for="exampleCheck1">People</label></p>
-            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-            <p><label class="form-check-label" for="exampleCheck1">Portrait</label></p>
-            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-            <p><label class="form-check-label" for="exampleCheck1">Nature</label></p>
-            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-            <p><label class="form-check-label" for="exampleCheck1">Animal</label></p>
-            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-            <p><label class="form-check-label" for="exampleCheck1">Women</label></p>
-            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-            <p><label class="form-check-label" for="exampleCheck1">Floral</label></p>
-            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-            <p><label class="form-check-label" for="exampleCheck1">Still Life</label></p>
-          </div>
-        </form>
-
-        <form class="filter-box">
-          <h5>Medium</h3>
-          <div class="form-check">
-            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-            <p><label class="form-check-label" for="exampleCheck1">Acrylic</label></p>
-            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-            <p><label class="form-check-label" for="exampleCheck1">Oil</label></p>
-            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-            <p><label class="form-check-label" for="exampleCheck1">Watercolor</label></p>
-            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-            <p><label class="form-check-label" for="exampleCheck1">Ink</label></p>
-            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-            <p><label class="form-check-label" for="exampleCheck1">Paint</label></p>
-            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-            <p><label class="form-check-label" for="exampleCheck1">Spray Paint</label></p>
-            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-            <p><label class="form-check-label" for="exampleCheck1">Gesso</label></p>
-            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-            <p><label class="form-check-label" for="exampleCheck1">Gouache</label></p>
-            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-            <p><label class="form-check-label" for="exampleCheck1">Paper</label></p>
-          </div>
-        </form>
-
-        <form class="filter-box">
-          <h5>Medium</h3>
-          <div class="form-check">
-            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-            <p><label class="form-check-label" for="exampleCheck1">Material</label></p>
-            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-            <p><label class="form-check-label" for="exampleCheck1">Canvas</label></p>
-            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-            <p><label class="form-check-label" for="exampleCheck1">Paper</label></p>
-            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-            <p><label class="form-check-label" for="exampleCheck1">Wood</label></p>
-            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-            <p><label class="form-check-label" for="exampleCheck1">Cardboard</label></p>
-            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-            <p><label class="form-check-label" for="exampleCheck1">Soft</label></p>
-            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-            <p><label class="form-check-label" for="exampleCheck1">Plastic</label></p>
-            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-            <p><label class="form-check-label" for="exampleCheck1">Aluminium</label></p>
-            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-            <p><label class="form-check-label" for="exampleCheck1">Glass</label></p>
-            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-            <p><label class="form-check-label" for="exampleCheck1">Steel</label></p>
+            <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
           </div>
         </form>
 
         <form class="filter-box">
           <h5>Price</h3>
-          <div class="form-check">
+          <div class="form-check" value="filter">
             <input type="checkbox" class="form-check-input" id="exampleCheck1">
             <p><label class="form-check-label" for="exampleCheck1">Under £500</label></p>
             <input type="checkbox" class="form-check-input" id="exampleCheck1">
@@ -125,7 +52,7 @@
             <p><label class="form-check-label" for="exampleCheck1">Over £10,000</label></p>
         </form>
       </div>
-    </div>
+    </div> %>
 
     <div>
       <div id="page-info">
@@ -139,16 +66,17 @@
         <% @arts.each do |art| %>
           <%= link_to art_path(art) do %>
             <div class="art-card">
-            <% if art.photo.attached? %>
-              <%= cl_image_tag art.photo.key,height: 350, width: 300, crop: :fill, radius: 8, id:"photo" %>
-            <% end %>
-            <div style="display:flex; justify-content:space-between;">
-              <div class="content">
-                <h5 style="font-weight:bolder;"><%= art.name %></h5>
-                <p><%= art.artist %></p>
-              </div>
-              <div class="content">
-                <p>£<%= art.price %></p>
+              <% if art.photo.attached? %>
+                <%= cl_image_tag art.photo.key,height: 300, width: 250, crop: :fill, id:"photo" %>
+              <% end %>
+              <div style="display:flex; justify-content:space-between;">
+                <div class="content">
+                  <h5 style="font-weight:bolder;"><%= art.name %></h5>
+                  <p><%= art.artist %></p>
+                </div>
+                <div class="content">
+                  <p>£<%= art.price %></p>
+                </div>
               </div>
             </div>
           <% end %>
