--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,5 +1,5 @@
 .arts-cards {
-  margin: 0 auto;
+  margin: 0 60px;
   border: transparent;
   display: grid;
   grid-template-columns: repeat(5, 1fr);
@@ -13,13 +13,17 @@
 
 .art-card {
   background-color: transparent;
-  border: 1px solid black;
-  box-shadow: 3px 3px 5px px rgb(189, 189, 189);
-  width: 250px;
+  box-shadow: 2px 2px 10px 0px rgba(0,0,0,0.2);
+  width: calc(100% - 40px);
+  margin: 20px;
+  height: 450px;
+  border-radius: 4px;
 }
 
 #photo {
   display: flex;
   width: 100%;
   border: 2px solid rgb(44, 44, 44);
+  object-fit: cover;
+  border-radius: 4px 4px 0 0;
 }
