--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -4,7 +4,8 @@
     <%= image_tag "marz-studio-logo.png" %>
   <% end %>
   
-  <%# <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+  <%# <% <button class="navbar-toggler" type="button" data-toggle="collapse" 
+  data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> %>
 
   <% if user_signed_in? %>
     <form id="search-bar" class="form-inline">
@@ -34,6 +35,7 @@
         </li>
       </ul>
     </div>
+
   <% else %>
 
     <form id="search-bar" class="form-inline">
