--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -6,7 +6,12 @@
   height: 100px;
   padding: 0px 50px;
   color: black;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  margin-top: 16px;
 }
+
 .footer-links {
   display: flex;
   align-items: center;
