--- a/app/assets/stylesheets/components/_myprofile.scss
+++ b/app/assets/stylesheets/components/_myprofile.scss
@@ -38,3 +38,21 @@
   padding: 16px;
 }
 
+// go to top
+
+#back-to-top {
+    background: none repeat scroll 0 0 #333333;
+    border-radius: 3px;
+    bottom: 20px;
+    color: #FFFFFF;
+    display: none;
+    font-size: 18px;
+    height: 30px;
+    line-height: 28px !important;
+    opacity: 0.8;
+    position: fixed;
+    right: 20px;
+    text-align: center;
+    width: 30px;
+}
+
