--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,7 +1,6 @@
 .navbar-lewagon {
   justify-content: space-between;
-  background: white;
-  box-shadow: 2px 2px 4px 0px rgba(141, 141, 141, 0.4);
+  background: #EEEEEE;
   height: 96px;
   position: relative;
   border-bottom: 2px solid black;
