--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,7 +13,7 @@
         <input name="query" class="form-control mr-sm-2" type="search" placeholder="<%= @query %>" aria-label="Search">
         <input name="previous_query" type="hidden" value="<%= @query %>">
       <% else %>
-        <input name="query" class="form-control mr-sm-2" type="search" aria-label="Search">
+        <input name="query" class="form-control mr-sm-2" type="search" aria-label="Search" placeholder="">
       <% end %>
       <button class="btn btn-outline-primary my-2 my-sm-0" type="submit"><i class="fas fa-search"></i></button>
     </form>
