--- a/app/views/arts/show.html.erb
+++ b/app/views/arts/show.html.erb
@@ -1,57 +1,56 @@
-  <!-- <div class="main-header">
-  <nav class="navigation ">
-    <ul class="list d-flex justify-content-center pt-5">
-      <li id="ctl00">
-        <a class=" nav-item p-4" href="/galleries/lisson-gallery/">Home</a>
-      </li>
-      <li id="ctl00">
-        <a class="nav-item active p-4" href="/galleries/lisson-gallery/artworks/">Index</a>
-      </li>
-      <li id="ctl00">
-        <a class=" nav-item p-4" href="/galleries/lisson-gallery/artists/">Show</a>
-      </li>
-      <li id="ctl00">
-        <a class=" nav-item p-4" href="/galleries/lisson-gallery/exhibitions/">Purchases</a>
-      </li>
-      <li id="ctl00">
-        <a class=" nav-item p-4" href="/galleries/lisson-gallery/art-fairs/"></a>
-      </li>
-    </ul>
-  </nav>
-</div> -->
+<div class="showpage">
+  <div class="name-header">
+    <h1>
+      <strong><%= @art.name %></strong>
+    </h1>
+  </div>
+  <div class=" main-container">
 
-<div class="container1">
+      <%= cl_image_tag @art.photo.key, class: "image" %>
 
-    <div class="wrapper d-flex">
 
-    <div class="left">
-      <div class="art-photo">
-    <% if @art.photo.attached? %>
-      <div class="image"><%= cl_image_tag @art.photo.key %></div>
-    <% else %>
-      url('https://images.unsplash.com/photo-1497990902153-c6d041aad676?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1107&q=80')
-    <% end %>
+    <div class="content-container">
+      <div class="details-container">
+        <ul>
+          <li class="details">
+            <strong>Artist name: </strong><%= @art.artist %>
+          </li>
+          <!-- <li>
+            <strong>Description: </strong><%= @art.description  %>
+          </li> -->
+          <li class="details">
+            <strong>Location: </strong><%= "London" %>
+          </li>
+          <li class="details">
+            <strong>Price: </strong>£ <%= @art.price %>
+          </li>
+          <li class="details">
+            <strong>Style: </strong><span>Fine art, Modern, Abstract</span>
+          </li>
+          <li class="details">
+            <strong>Size: </strong><span>39.4 W x 59.1 H x 0.8 in</span>
+          </li>
+        </ul>
       </div>
-    </div>
-    <div class="right">
-      <div class="button d-flex">
-      <!-- <h1><%= @art.artist %></h1> -->
-      <h1><%=@art.name %></h1>
-      <%= link_to 'Purchase', new_art_purchase_path(@art), class: "btn btn-primary ml-4" %>
-    </div>
-
-      <div class="art-info">
-        <p id="price-tag">Price:  £<%= @art.price %></p>
-         <%#= @art.name %>
-        <p id="price-tag">Style:  <%= @art.style %></p>
+      <div class="buttons d-flex">
+          <p><%= link_to 'Purchase', new_art_purchase_path(@art), class: "btn btn-primary ml-5 mt-4" %></p>
+          <p><a class="btn btn-warning mt-4 ml-2">Back</a></p>
       </div>
-      <div class="art-description">
-         <%= @art.description %>
+      <div class="shipping d-flex mt-2">
+        <p id="shipping-info"><i class="fas fa-check"></i></p>
+        <p>Shipping included</p>
       </div>
     </div>
   </div>
-</div>
 
+    <div class="description-div">
+      <div class="description">
+        <%= @art.description %>
+    </div>
+    <div class="likes-icon">
+      </div>
+  </div>
+</div>
 
 
 
