--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -8,7 +8,7 @@
         <% if current_user.photo.attached? %>
           <img src="<%= cl_image_path current_user.photo.key %>" alt="profile pic" style="width:100%" class="mb-4">
         <% else %>
-          <img src="https://www.kindpng.com/picc/m/22-223930_avatar-person-neutral-man-blank-face-buddy-facebook.png" alt="profile pic" style="width:100%" class="mb-4">
+          <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png" alt="profile pic" style="width:100%">
         <% end %>
 
         <%= link_to "Sell your art", new_art_path, class:"btn btn-primary" %>
