--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -36,7 +36,7 @@
           </div>
 
         <div class="profile-sell">
-          <h4>Listing Item</h4>
+          <h4>Listing Items</h4>
           <% if @arts_sell.count == 0 %>
             <h5> You haven't listed anything for sale yet! </h5>
           <% else %>
@@ -56,7 +56,6 @@
         </div>
       </div>
     </div>
-
   </div>
 </div>
 
