--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -19,15 +19,8 @@ body {
 }
 
 #page-info {
-  margin: 32px;
+  text-align: center;
   margin-top: 32px;
   color: grey;
   font-family: 'Montserrat', sans-serif;
-}
-
-.line {
-  border: solid 2px rgb(61, 61, 61);
-  width: 100px;
-  margin: 0;
-  padding: 0;
 }
