--- a/app/views/arts/index.html.erb
+++ b/app/views/arts/index.html.erb
@@ -56,11 +56,9 @@
 
     <div>
       <div id="page-info">
-        <h2 style="font-weight:bold; ">View our Gallery</h2>
+        <h2 style="font-family: 'Montserrat', sans-serif; color: #424242;"><strong>View our Gallery</strong></h2>
         <p>Some words for some stuff and that woo what a great bit of text here yay!</p>
       </div>
-
-      <div id="line"></div>
 
       <div class="arts-cards">
         <% @arts.each do |art| %>
