--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,3 @@
-
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
   <%= link_to root_path, class: "navbar-brand" do %>
     <%= image_tag "marz-studio-logo.png" %>
@@ -45,7 +44,7 @@
       <% else %>
         <input name="query" class="form-control mr-sm-2" type="search" aria-label="Search">
       <% end %>
-      <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
+      <button class="btn btn-outline-primary my-2 my-sm-0" type="submit"><i class="fas fa-search"></i></button>
     </form>
 
     <div class="register-buttons">
@@ -54,4 +53,3 @@
     </div>
   <% end %>
 </div>
-
