--- a/app/assets/stylesheets/components/_carousel.scss
+++ b/app/assets/stylesheets/components/_carousel.scss
@@ -33,3 +33,10 @@
   font-family: 'Pacifico', cursive;
   font-size: 100px;
 }
+
+.carousel-text:hover{
+  color: #707070;
+  font-family: 'Pacifico', cursive;
+  font-size: 100px;
+  text-decoration: none
+}
