--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,13 +7,13 @@
     <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
   </ol>
   <div class="carousel-item active carousel-photo-1">
-    <div class="carousel-inner-1">
-      <%= link_to "Buy", arts_path, class: "carousel-text" %>
+    <div class="carousel-inner-1 ">
+      <%= link_to "Buy Art", arts_path, class: "carousel-text" %>
     </div>
   </div>
   <div class="carousel-item carousel-photo-2 carousel-text">
     <div class="carousel-inner-1">
-      <%= link_to "Sell", arts_path, class: "carousel-text" %>
+      <%= link_to "Sell Art", arts_path, class: "carousel-text" %>
     </div>
   </div>
   <div class="carousel-item carousel-photo-3 carousel-text">
