--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,15 +1,13 @@
 .footer {
-  background: #F4F4F4;
+  background: white;
   display: flex;
   align-items: center;
   justify-content: space-between;
   height: 100px;
   padding: 0px 50px;
-  color: black;
+  color: #707070;
   left: 0;
-  bottom: 0;
   width: 100%;
-  margin-top: 16px;
 }
 
 .footer-links {
@@ -28,4 +26,8 @@
 }
 .footer .fa-heart {
   color: #D23333;
+}
+
+.full-page{
+  min-height: calc(100vh - 96px - 100px);
 }
