--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,3 +1,3 @@
-<div class="footer justify-content-center">
-  <h2>Douche for Douches</h2>
+<div class="footer justify-content-center font-oswald">
+  <p>A MARZ Production</p>
 </div>
