--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -20,7 +20,7 @@ body {
 
 #page-info {
   text-align: center;
-  margin-top: 32px;
+  margin: 80px 0 40px 0;
   color: grey;
   font-family: 'Montserrat', sans-serif;
 }
