--- a/app/views/arts/index.html.erb
+++ b/app/views/arts/index.html.erb
@@ -57,7 +57,7 @@
     <div>
       <div id="page-info">
         <h2 style="font-family: 'Montserrat', sans-serif; color: #424242;"><strong>View our Gallery</strong></h2>
-        <p>Some words for some stuff and that woo what a great bit of text here yay!</p>
+        <p>MARZ studio is an art gallery specialising in original contemporary and classical art for sale <br> including paintings and photographs. We are delighted to occasionally host private viewing <br> and special exhibitions. If you like the website feel free to give us a star <a href="https://github.com/MarcusThorne/MARZ_studio">here</a>.</p>
       </div>
 
       <div class="arts-cards">
@@ -67,13 +67,16 @@
               <% if art.photo.attached? %>
                 <%= cl_image_tag art.photo.key,height: 300, width: 250, crop: :fill, id:"photo" %>
               <% end %>
-              <div style="display:flex; justify-content:space-between;">
+             
+              <div class="art-card-price">
+                £<%= art.price %>
+              </div>
+
+              <div class="card-content" style="display:flex; justify-content:space-between;">
                 <div class="content">
                   <h5 style="font-weight:bolder;"><%= art.name %></h5>
-                  <p><%= art.artist %></p>
-                </div>
-                <div class="content">
-                  <p>£<%= art.price %></p>
+                  <div class="line"></div>
+                  <p style="margin-top: 8px; "><i class="fas fa-palette"></i> <%= art.artist %></p>
                 </div>
               </div>
             </div>
