--- a/app/views/purchases/new.html.erb
+++ b/app/views/purchases/new.html.erb
@@ -13,5 +13,5 @@
     </div>
     <%= link_to 'Back', art_path(@art), class: "btn btn-primary mt-3 mr-4" %>
 
-    <%= f.button :submit, class: "btn btn-primary mt-3" %>
+    <%= f.button :submit, class: "btn new-button" %>
   <% end %>
