--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -1,72 +1,93 @@
-.showpage {
-  background-color: #fff;
-}
-.name-header {
-  // background-color: blue;
-  text-align: center;
-  padding: 30px;
-}
-.main-container {
-  display: flex;
-  align-items: flex-start;
-  justify-content: space-around;
-  margin-top: 60px;
-  max-width: 1200px;
-  margin: 0 auto;
-
-}
-
-.details-container {
-  margin-top: 30px;
-}
-
-.description-div {
-  // background-color: ;
-  height: 250px;
-  width: 650px;
-  margin: 0 auto;
-  margin-top: 80px;
-  font-style:italic;
-  font-size:120%;
-  padding: 10px;
-  position: relative;
-}
-
-.image {
-  width: 63%;
-  margin: 1%;
-
-}
-
-.buttons {
-  margin-left: 60px;
-  // background-color: #e5e5e5;
-  height: 60px;
-}
-
-.content-container {
-  background-color: #e5e5e5;
-  width: 32%;
-  margin: 1%;
-  height: 300px;
-}
-
-.likes-icon {
-  background-color: red;
-  height: 40px;
-  width: 620px;
-  margin-top: 30px;
-  position: absolute;
-  bottom: 0px;
-  margin-bottom: 5px;
-}
-
-.shipping {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.shopping-info {
   font-size: 13px;
 }
+
+.un-list {
+  list-style-type: none;
+}
+
+
+
+// .showpage {
+//   background-color: #fff;
+// }
+// .name-header {
+//   // background-color: blue;
+//   text-align: center;
+//   padding: 30px;
+// }
+// .main-container {
+//   display: flex;
+//   align-items: flex-start;
+//   justify-content: space-around;
+//   margin-top: 60px;
+//   max-width: 1200px;
+//   margin: 0 auto;
+
+// }
+
+// .details-container {
+//   margin-top: 30px;
+//   line-height: 3.5;
+// }
+
+// .details {
+//   margin-left: 20px;
+// }
+
+// .un-list {
+//   list-style-type: none;
+// }
+
+// .description-div {
+//   // background-color: ;
+//   height: 250px;
+//   width: 300px;
+//   margin: 0 auto;
+//   margin-top: 80px;
+//   font-style:italic;
+//   font-size:120%;
+//   padding: 10px;
+//   position: relative;
+// }
+
+// .image {
+//   width: 500px;
+//   // margin: 1%;
+
+// }
+
+// .buttons {
+//   margin-left: 40px;
+//   // background-color: #e5e5e5;
+//   height: 60px;
+//   margin-top: 30px;
+//   border-radius: 20px;
+// }
+
+// .content-container {
+//   background-color: #f4f4f4;
+//   width: 32%;
+//   margin: 1%;
+//   height: 900px;
+// }
+
+// .likes-icon {
+//   background-color: red;
+//   height: 40px;
+//   width: 620px;
+//   margin-top: 30px;
+//   position: absolute;
+//   bottom: 0px;
+//   margin-bottom: 5px;
+// }
+
+// .shipping {
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+//   font-size: 13px;
+// }
 
 // .shipping-info {
 //   margin-left: 10px;
