--- a/app/views/arts/show.html.erb
+++ b/app/views/arts/show.html.erb
@@ -1,56 +1,64 @@
-<div class="showpage">
-  <div class="name-header">
-    <h1>
-      <strong><%= @art.name %></strong>
-    </h1>
-  </div>
-  <div class=" main-container">
+<div class="container pt-5">
+  <div class="row">
+    <div class="col-6">
+       <%= cl_image_tag @art.photo.key, class: "w-100" %>
+    </div>
+    <div class="col-6">
+      <div class="bg-light p-3">
+        <h1><strong><%= @art.name %></strong></h1>
+        <ul class="un-list">
+        <li class="p-3 links"><strong><i class="fas fa-user"></i> : </strong><%= @art.artist %></li>
+        <li class="p-3 links"><strong><i class="fas fa-location-arrow"></i> : </strong><%= "London" %></li>
+        <li class="p-3 links"><strong><i class="fas fa-pound-sign"></i> : </strong><%= @art.price %></li>
+        <li class="p-3 links"><strong><i class="fas fa-paint-brush"></i> : </strong><span><%= @art.style %></span></li>
+        <li class="p-3 links"><strong><i class="fas fa-truck-pickup"></i> : </strong><span>39.4 W x 59.1 H x 0.8 in</span></li>
+      </ul>
 
-      <%= cl_image_tag @art.photo.key, class: "image" %>
-
-
-    <div class="content-container">
-      <div class="details-container">
-        <ul>
-          <li class="details">
-            <strong>Artist name: </strong><%= @art.artist %>
-          </li>
-          <!-- <li>
-            <strong>Description: </strong><%= @art.description  %>
-          </li> -->
-          <li class="details">
-            <strong>Location: </strong><%= "London" %>
-          </li>
-          <li class="details">
-            <strong>Price: </strong>£ <%= @art.price %>
-          </li>
-          <li class="details">
-            <strong>Style: </strong><span>Fine art, Modern, Abstract</span>
-          </li>
-          <li class="details">
-            <strong>Size: </strong><span>39.4 W x 59.1 H x 0.8 in</span>
-          </li>
-        </ul>
-      </div>
       <div class="buttons d-flex">
           <p><%= link_to 'Purchase', new_art_purchase_path(@art), class: "btn btn-primary ml-5 mt-4" %></p>
-          <p><a class="btn btn-warning mt-4 ml-2"><%= link_to 'Back', arts_path(@arts) %></a></p>
+          <p><%= link_to 'Back', arts_path(@arts), class: "btn btn-warning mt-4 ml-3" %></a></p>
       </div>
-      <div class="shipping d-flex mt-2">
-        <p id="shipping-info"><i class="fas fa-check"></i></p>
+      <div class="d-flex shopping-info">
+        <p><i class="fas fa-check"></i></p>
         <p>Shipping included</p>
       </div>
     </div>
-  </div>
 
-    <div class="description-div">
-      <div class="description">
+
+      <div class="description bg-light p-3 mt-4">
         <%= @art.description %>
     </div>
-    <div class="likes-icon">
-      </div>
+
+    </div>
+
   </div>
+
 </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
