i did a fair bit of stuff, first off i changed the drop down menu so that it looks nice rather than the big blue button, i changed the footer so it now has some icons, i did a migration and added two new fields category and subject and lastly, they said it couldnt be done , but i made a filter, hench the added fields works perfectly, just need to do some styling on the purchase form tomorrow and i was thinking about possibily added a delete function but might be difficult, i also need to add the last field for the filter, then we can  just do whatever we want to after that

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,6 @@
 .navbar-lewagon {
   justify-content: space-between;
-  background: white;
+  background: whitesmoke;
   height: 96px;
   position: relative;
   border-bottom: 4px solid black;
@@ -25,6 +25,7 @@
   transform: translate(-50%, -50%);
   top: 48px;
 }
+
 
 #search-bar button {
   margin: -10px;
