--- a/app/views/arts/show.html.erb
+++ b/app/views/arts/show.html.erb
@@ -43,7 +43,9 @@
       <div class="art-info">
         <p id="price-tag">Price:  £<%= @art.price %></p>
          <%#= @art.name %>
+        <p id="price-tag">Category:  <%= @art.category %></p>
         <p id="price-tag">Style:  <%= @art.style %></p>
+        <p id="price-tag">Subject:  <%= @art.subject %></p>
       </div>
       <div class="art-description">
          <%= @art.description %>
