--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,3 +1,10 @@
 <div class="footer justify-content-center font-oswald">
-  <p>A MARZ Production</p>
+  <p class="footer-content">A MARZ Production</p>
+  <p class="footer-content">|</p>
+  <div class="icons" style="display:flex;">
+    <p><i class="fab fa-facebook-square"></i></p>
+    <p><i class="fab fa-instagram"></i></p>
+    <p><i class="fab fa-pinterest-square"></i></p>
+    <p><i class="fab fa-twitter-square"></i></p>
+  </div>
 </div>
