--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -15,7 +15,7 @@
         <input name="query" class="form-control mr-sm-2" type="search" placeholder="<%= @query %>" aria-label="Search">
         <input name="previous_query" type="hidden" value="<%= @query %>">
       <% else %>
-        <input name="query" class="form-control mr-sm-2" type="search" aria-label="Search" placeholder="">
+        <input name="query" class="form-control mr-sm-2" type="search" aria-label="Search" placeholder="Search by artist or title...">
       <% end %>
       <button class="btn btn-outline-primary my-2 my-sm-0" type="submit"><i class="fas fa-search"></i></button>
     </form>
@@ -26,13 +26,15 @@
 
           <% if current_user.photo.attached? %>
             <%= cl_image_tag current_user.photo.key, class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+            <i class="drop-down-arrow fas fa-caret-down"></i>
           <% else %>
             <%= image_tag "https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+            <i class="drop-down-arrow fas fa-caret-down"></i>
           <% end %>
 
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
             <%= link_to "Profile", myprofile_path, class: "dropdown-item" %>
-            <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class:"btn btn-primary" %>
+            <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class:"dropdown-item" %>
           </div>
         </li>
       </ul>
