--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -3,20 +3,15 @@
   height: 50px;
   border-radius: 50%;
   margin-right: 20px;
+  box-shadow: 2px 2px 4px 0px rgba(51, 51, 51, 0.349);
+  border: white;
 }
-.avatar-large {
-  width: 56px;
-  border-radius: 50%;
-}
-.avatar-bordered {
-  width: 40px;
-  border-radius: 50%;
-  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
-  border: white 1px solid;
-}
-.avatar-square {
-  width: 40px;
-  border-radius: 0px;
-  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
-  border: white 1px solid;
+
+.drop-down-arrow {
+  position: absolute;
+  right: 20px;
+  top: 35px;
+  color: black;
+  font-size: 24px;
+  box-shadow: 2px 2px 4px 0px rgba(255, 255, 255, 0.349);
 }
