--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,9 +1,14 @@
 .arts-cards {
-  margin: 0 100px;
-  border: transparent;
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  margin-left: center;
+  grid-template-columns: repeat(4, 1fr);
+  width: 80%;
+  grid-gap: auto!important;
+  margin-left: 50px;
+}
+
+.arts-cards a {
+  display: flex;
+  justify-content: space-around;
 }
 
 .content {
@@ -18,7 +23,7 @@
 .art-card {
   background-color: transparent;
   box-shadow: 1px 1px 10px 0px rgba(0,0,0,0.1);
-  width: calc(100% - 100px);
+  width: 250px;
   margin: 50px;
   min-height: 400px;
   border-radius: 4px;
