--- a/app/assets/stylesheets/components/_filter.scss
+++ b/app/assets/stylesheets/components/_filter.scss
@@ -1,16 +1,32 @@
-// .filter-box {
-//   background-color: rgb(230, 230, 230);
-//   padding: 8px;
-//   margin: 8px;
-// }
+#filter {
+  background-color: transparent;
+  width: 100%;
+  text-align: left!important;
+  margin-top: -200px;
+  margin-left: 8px;
+  width: 250px;
+  height: 100vh;
+  padding: 8px;
+  font-family: 'Montserrat', sans-serif;
+  border-right: 1px solid rgb(236, 236, 236);
+}
 
-// #filter-search-bar p {
-//   margin-bottom: 0!important;
-//   background-color: rgb(197, 197, 197);
-// }
+.filter-content {
+  margin: -5px 8px 0 5px;
+  font-size: 12px;;
+}
 
-// #filter-search-bar {
-//   background-color: rgb(197, 197, 197)!important;
-//   box-shadow: 2px 2px 4px 0px rgba(182, 182, 182, 0.2);
-//   position: fixed;
-// }
+.filter-content button {
+  margin: 16px 0;
+  padding: 3px 40px;
+  border: transparent;
+  width: 216px
+}
+
+.title {
+  font-size: 16px;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: bold;
+  padding-bottom: 8px;
+  margin-left: 8px;
+}
