--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,33 +1,28 @@
 .footer {
-  background: white;
+  background: rgb(249, 249, 249);
   display: flex;
   align-items: center;
   justify-content: space-between;
   height: 100px;
-  padding: 0px 50px;
   color: #707070;
   left: 0;
   width: 100%;
+  border-top: 1px solid lightgrey;
+  margin-top: 32px;
 }
 
-.footer-links {
-  display: flex;
-  align-items: center;
-}
-.footer-links a {
-  color: black;
-  opacity: 0.15;
-  text-decoration: none;
-  font-size: 24px;
-  padding: 0px 10px;
-}
-.footer-links a:hover {
-  opacity: 1;
-}
 .footer .fa-heart {
   color: #D23333;
 }
 
 .full-page{
   min-height: calc(100vh - 96px - 100px);
+}
+
+.footer .footer-content {
+  padding: 18px 16px; 
+}
+
+.icons > p { 
+  padding: 4px;
 }
