--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -30,6 +30,7 @@
 .art-name {
   font-family: 'Source Serif Pro', serif, 'Dancing Script', cursive;
   margin-left: 70px;
+  font-size: 23px;
 }
 
 
