--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -32,7 +32,7 @@
 
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
             <%= link_to "Profile", myprofile_path, class: "dropdown-item" %>
-            <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class:"btn btn-primary" %>
+            <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class:"dropdown-item" %>
           </div>
         </li>
       </ul>
