--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -57,3 +57,13 @@ body {
   text-align: center;
 }
 
+.bottom-change{
+      margin-bottom: 20px !important;
+}
+
+.fr{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
