--- a/app/views/arts/show.html.erb
+++ b/app/views/arts/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container pt-5">
   <div class="row">
-      <div class="col-6">
+      <div class="image col-6">
         <%= cl_image_tag @art.photo.key, class: "w-100" %>
       </div>
       <div class="col-6">
