fixed upo some things and added the rest of the filter

--- a/app/assets/stylesheets/components/_filter.scss
+++ b/app/assets/stylesheets/components/_filter.scss
@@ -5,7 +5,7 @@
   margin-top: -200px;
   margin-left: 8px;
   width: 250px;
-  height: 100vh;
+  height: 110%;
   padding: 8px;
   font-family: 'Montserrat', sans-serif;
   border-right: 1px solid rgb(236, 236, 236);
@@ -14,13 +14,6 @@
 .filter-content {
   margin: -5px 8px 0 5px;
   font-size: 12px;;
-}
-
-.filter-content button {
-  margin: 16px 0;
-  padding: 3px 40px;
-  border: transparent;
-  width: 216px
 }
 
 .title {
