--- a/app/views/arts/new.html.erb
+++ b/app/views/arts/new.html.erb
@@ -3,21 +3,17 @@
 
   <%= simple_form_for(@art) do |f| %>
     <%= f.input :name %>
-
     <%= f.input :artist %>
 
     <div style="display: flex; justify-content: space-between;">
-      <%= f.input :category %>
-      <%= f.input :style %>
-      <%= f.input :subject %>
+      <%= f.input :category, collection: Art.categories %>
+      <%= f.input :style, collection: Art.styles %>
+      <%= f.input :subject, collection: Art.subjects %>
     </div>
 
     <%= f.input :price %>
-
     <%= f.input :description %>
-
     <%= f.input :photo, as: :file, required: true, input_html: { class: 'd-none' }, label_html: { class: 'btn new-button'}, wrapper_html: { class: 'middle-button'}, label: "📷 <span class='ml-2'>Upload A Photo</span>".html_safe %>
-
 
     <div class="fr">
       <%= f.submit class: "btn new-button" %>
