--- a/app/views/purchases/new.html.erb
+++ b/app/views/purchases/new.html.erb
@@ -4,7 +4,7 @@
   <%= simple_form_for [@art, @purchase] do |f| %>
     <div class="form mt-1" style="display: flex; flex-direction: column;">
       <label for="">Card Holder Name</label>
-      <input class="bottom-change" name="purchase[card_holder_name]" type="Card Number" placeholder="Enter Card Number">
+      <input class="bottom-change" name="purchase[card_holder_name]" type="Card Number" placeholder="Card Holder Name">
       <label for="">Card Number</label>
       <input class="bottom-change" name="purchase[card_number]" type="Card Number" placeholder="Enter Card Number">
       <label for="" >Expiration Date</label>
