--- a/app/assets/stylesheets/components/_myprofile.scss
+++ b/app/assets/stylesheets/components/_myprofile.scss
@@ -1,15 +1,15 @@
 .card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   max-width: 250px;
   margin: auto;
   text-align: center;
+  border: none;
 }
 
 .profile-card-product {
   overflow: hidden;
   height: 120px;
-  background: white;
-  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  background: transparent;
+  box-shadow: 1px 1px 8px rgba(0,0,0,0.1);
   display: flex;
   align-items: center;
   margin-top: 8px;
