--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -3,7 +3,7 @@
   background: whitesmoke;
   height: 96px;
   position: relative;
-  border-bottom: 4px solid black;
+  border-bottom: 4px solid rgb(58, 58, 58);
 }
 
 .navbar-lewagon .navbar-collapse {
